Revision history for Bread::Runner

0.903   2020-11-20T15:59:17
    - Handle HashRef command line params


0.902	2019-08-07T19:13:44
    - Added missing prereqs as reported by CPANTS. (Mohammad S Anwar)


0.901  2016-12-09T12:35:01
    - add a default startup logmessage, and an opt to disable it (Thomas Klausner)
    - readme to make github happy (Thomas Klausner


0.900   2016-10-23T17:37:00+0200
    - added tests & documentation
    - extracted from Validad::Tools
