@@ -1,8 +1,31 @@
-requires 'Bread::Board';
-requires 'Log::Any';
-requires 'Module::Runtime';
-requires 'Try::Tiny';
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
+requires "Bread::Board" => "0";
+requires "Carp" => "0";
+requires "Getopt::Long" => "0";
+requires "Log::Any" => "0";
+requires "Module::Runtime" => "0";
+requires "Scalar::Util" => "0";
+requires "Try::Tiny" => "0";
+requires "perl" => "5.020";
+
+on 'build' => sub {
+  requires "Module::Build" => "0.28";
+};
 
 on 'test' => sub {
-    requires 'Test::Most';
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
+  requires "Log::Any::Test" => "0";
+  requires "Moose" => "0";
+  requires "Test::More" => "0";
+  requires "Test::Most" => "0";
+  requires "lib" => "0";
+};
+
+on 'configure' => sub {
+  requires "Module::Build" => "0.28";
 };
