@@ -1,38 +1,4 @@
 name    = Bread-Runner
-author  = Thomas Klausner <domm@cpan.org>
-license = Perl_5
-copyright_holder = Thomas Klausner
-copyright_year   = 2016 - 2019
+copyright_year   = 2016 - 2021
 
-[GatherDir]
-exclude_match = local
-exclude_match = cpanfile.snapshot
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[Readme]
-[ExecDir]
-[ShareDir]
-[Repository]
-
-[MetaResources]
-
-[CheckChangeLog]
-
-[Manifest]
-
-[TestRelease]
-[ConfirmRelease]
-
-[Prereqs::FromCPANfile]
-
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-
-[InstallGuide]
-[MetaJSON]
-
-[@Git]
-
+[@Author::DOMM]
