@@ -1,7 +1,0 @@
-#!/usr/bin/perl
-use Test::More;
-use lib 'lib';
-
-require_ok( 'Bread::Runner' );
-
-done_testing();
