@@ -1,5 +1,10 @@
 Revision history for Bread::Runner
 
+{{$NEXT}}
+    - dist housekeeping: github issues,
+      Dist::Zilla::PluginBundle::Author::DOMM
+
+
 0.903   2020-11-20T15:59:17
     - Handle HashRef command line params
 
